main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  --white: #e4e4e7;
  --gold: #AB8746;
  --blue: #22a7cf;
  --secondary-black: #343434;
  --hover-black: #4d4d4d;
  --gray: #858586;
  --secondary-gray: #616161;
  --dark-border: #48484d;
}

body {
  font-family: "Poppins", sans-serif;
  height: 100vh;
  width: 80%;
  margin: auto;
  display: flex;
  flex-direction: column;
  background-color: #242424;
  color: var(--white);
}

header {
  margin-top: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
}

header h1 {
  font-family: "Signika Negative", sans-serif;
  font-size: 4rem;
  font-weight: 400;
  font-optical-sizing: auto;
  color: var(--gold);
}

header span {
  color: var(--gray);
  cursor: pointer;
  transition: 150ms;
}

header span:hover {
  color: var(--secondary-gray);
}

main {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: 32px;
  padding: 32px;
}

.custom-input {
  width: 100%;
  position: relative;
}

#guess-input {
  width: 100%;
  padding: 15px;
  font-size: 20px;
  background-color: var(--secondary-black);
  border: 1px solid var(--dark-border);
  border-radius: 6px;
  color: var(--white);
  transition: 300ms;
}

#guess-input:focus {
  outline: none
}

.champion-list {
  position: absolute;
  top: 100%;
  display: flex;
  flex-direction: column;

  width: 100%;
  max-height: 300px;
  margin-top: 5px;
  background-color: var(--secondary-black);
  border: 1px solid var(--secondary-gray);
  border-radius: 4px;

  overflow-y: auto;
  transition: 100ms;
}

li:has(input:focus) {
  display: flex;
}

.champion-list:not(:has(li>input:not(:disabled))) {
  display: none;
}

.option {
  border: 2px solid transparent;
  padding: 10px;
  cursor: pointer;
  position: relative;
  list-style: none;
  display: flex;
  align-items: center;
  gap: 20px;
  box-sizing: content-box;
}

.option p:first-child {
  font-size: 18px;
  font-weight: 500;
}

.option .title {
  margin-top: 5px;
  font-size: 15px;
  font-style: italic;
  color: var(--white)
}

.option:not(:last-child) {
  border-bottom: 1px solid var(--secondary-gray);
}

.option:has(input:disabled) {
  display: none;
}

.option input[type="radio"] {
  outline: none;
  all: unset;

  position: absolute;
  inset: 0;
}

.option:has(input[type="radio"]:focus) {
  border: 2px solid var(--gold);
  z-index: 2;
}

.option:has(input[type="radio"]:checked),
.option:hover {
  background-color: var(--hover-black);
}

footer {
  padding: 20px;
}

footer p {
  font-size: 20px;
}

dialog {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 25px;
  border-radius: 8px;
  background-color: var(--secondary-black);
  color: var(--white);
  border: 1px solid var(--dark-border);
}

::backdrop {
  background-color: black;
  opacity: 0.75;
}

.dialog-content {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

#close-button {
  all: unset;
  position: absolute;
  top: 10px;
  right: 10px;
  padding: 2px;

  font-size: 18px;
  font-weight: 500;
  text-align: center;

  width: 20px;
  height: 20px;
  border-radius: 20px;
  cursor: pointer;
  transition: 150ms;
}

#close-button:hover {
  background-color: var(--hover-black);
}

.guesses {
  width: 100%;
  height: 100%;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background-color: var(--secondary-black);
  border-radius: 1rem;
  animation: emerge 300ms ease-in-out;
  overflow-y: auto;
}

.answer {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  font-size: 1.2rem;
  font-weight: 500;
}

.square {
  flex-basis: calc(15% - 0.5rem);
  background-color: red;
}

@keyframes emerge {
  0% {
    opacity: 0;
    width: 0;
    height: 0;
  }
}

